# moviepy

./: .gitignore  README.md  pyproject.toml  pyproject.toml.bak
src/: main.py  utils.py
src/music/: video.webm
