[project]
name = "moviepy"
version = "0.1.0"
description = ""
authors = [
    {name = "ronghantao",email = "ronghantao@kuaishou.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.1,<3.0.0)",
    "proglog (>=0.1.12,<0.2.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "poetry-core>=2.0.0,<3.0.0",
    "decorator (>=5.2.1,<6.0.0)",
    "imageio (>=2.37.0,<3.0.0)",
    "imageio-ffmpeg>=0.6.0,<0.7.0",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "click (>=8.2.1,<9.0.0)",
]

[tool.poetry.dependencies]
python = "^3.13"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
